refactor(units): introduce our own repository layer interface for units
Co-authored-by: Github Copilot (Claude 3.5 Sonnet)